--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "scripts": {
         "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix frontend\"",
         "install:all": "npm install && npm install --prefix server && npm install --prefix frontend",
-        "start": "npm run dev"
+        "build": "npm install --prefix server && npm install --prefix frontend && npm run build --prefix frontend",
+        "start": "node server/server.js"
     },
     "devDependencies": {
         "concurrently": "^9.1.2"
+    },
+    "dependencies": {
+        "axios": "^1.13.5"
     }
 }
