docker files added

--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,3 @@
-PORT=5001
-MONGODB_URI=mongodb://127.0.0.1:27017/scorehub
-JWT_SECRET=scorehub_jwt_secret_key_2026_production
-SPORTSDB_API_KEY=3
-CRICAPI_KEY=b825cbb1-b220-48bf-854c-2ee543548215
-
-# Email configuration for password reset
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password-here
-FRONTEND_URL=http://localhost:3000
+PORT=5000
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=secret-key
