Integrated Cricbuzz API, added match widgets, and fixed DB/Socket config

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,5 @@ VITE_SUPABASE_URL="https://weuecbfiwjnnglxsuiwr.supabase.co"
 VITE_API_SPORTS_KEY="4fa003816fbbd83617e54957a64997a7"
 VITE_CRIC_API_KEY="b825cbb1-b220-48bf-854c-2ee543548215"
 VITE_API_SPORTS_URL="https://v3.football.api-sports.io"
+VITE_SOCKET_URL="http://localhost:5001"
+VITE_API_URL="http://localhost:5001/api"
