--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,7 @@ CRICAPI_KEY=b825cbb1-b220-48bf-854c-2ee543548215
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password-here
 FRONTEND_URL=http://localhost:3000
+
+# RapidAPI (Cricbuzz)
+RAPIDAPI_KEY=10713afc09mshb6904d96a0824c6p12bfbbjsnabf5f08d72a9
+RAPIDAPI_HOST=cricbuzz-cricket.p.rapidapi.com
