--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node server.js",
         "dev": "node --watch server.js",
-        "seed": "node seeds/seed.js"
+        "seed": "node seeds/seed.js",
+        "test": "jest --runInBand"
     },
     "dependencies": {
         "axios": "^1.13.5",
@@ -22,5 +23,9 @@
         "nodemailer": "^8.0.1",
         "socket.io": "^4.7.5",
         "tabletojson": "^4.1.8"
+    },
+    "devDependencies": {
+        "jest": "^30.2.0",
+        "supertest": "^7.2.2"
     }
 }
