--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ dist
 dist-ssr
 *.local
 
+# Environment variables (secrets)
+.env
+.env.local
+.env.*.local
+.env.production
+server/.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
